--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.0",
     "@mui/material": "^5.5.3",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.3",
@@ -17,6 +18,8 @@
     "@types/react-simple-maps": "^1.0.8",
     "antd": "^4.19.5",
     "axios": "^0.26.1",
+    "currency-codes": "^2.1.0",
+    "iso-639-2-english": "^1.2.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
